# blogwarrior

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  dprint.json  feeds.jsonl  feeds.txt  justfile  posts.jsonl  release-plz.toml  renovate.json
.github/workflows/: ci.yml  release-plz.yml
crates/synctato/: CHANGELOG.md  Cargo.toml
crates/synctato/src/: lib.rs
crates/synctato/src/git/: cli.rs  local.rs
crates/table/: Cargo.toml
crates/table/src/: lib.rs
demo/: demo.tape
perf/: bench.sh  setup.py  sources.txt  validate.py
spud/: Dockerfile
spud/app/gui/: index.html  read.html  style.css
spud/app/templates/: show.sh.html  sync.sh.html  view.sh.html
src/: display.rs  feed_source.rs  git.rs  http.rs  main.rs  progress.rs  query.rs  read_mark.rs  shorthand.rs  store.rs  synctato.rs  table.rs  test_helpers.rs
src/commands/: add.rs  clone.rs  config.rs  export.rs  feed_export.rs  feed_ls.rs  import.rs  mod.rs  open.rs  pull.rs  remove.rs  show.rs  sync.rs
src/data/: index.rs  mod.rs
src/data/schema/: read_mark.rs
src/display/: group.rs  item.rs  mod.rs
src/feed/: atom.rs  discover.rs  mod.rs  pull.rs  rss.rs
src/git/: cli.rs  local.rs  mod.rs
src/query/: grammar.rs  mod.rs  resolve.rs
src/schema/: feed_source.rs  mod.rs  read_mark.rs
src/tables/: feed_item.rs  mod.rs  read_mark.rs
src/utils/: date.rs  http.rs  jq.rs  mod.rs  version_check.rs
tests/: integration.rs
