[package]
name = "blogtato"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
atom_syndication = "0.12"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.14"
rss = "2"
sha2 = "0.10"
url = "2"
dirs = "6"
open = "5"
readability-js = "0.1"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
assert_cmd = "2"
