[workspace]
members = [".", "crates/table"]

[package]
name = "blogtato"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blog"
path = "src/main.rs"

[dependencies]
anyhow = "1"
atom_syndication = "0.12"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.20"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.14"
rss = "2"
synctato = { path = "crates/table" }
url = "2"
feedfinder = "0.4"
dirs = "6"
indicatif = "0.17"
open = "5"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"
assert_cmd = "2"
libc = "0.2"
sha2 = "0.10"
