[package]
name = "synctato"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.44", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
paste = "=1.0.15"

[dev-dependencies]
tempfile = "3"
libc = "0.2"
